<resources>
    <string name="app_name">CarPark</string>
    <string name="carpark_registry">Entrada y \nSalida</string>
    <string name="carpark_register">Alta de \nvehículos</string>
    <string name="carpark_month">Comienzo de \nmes</string>
    <string name="carpark_pay">Pago de \nresidentes</string>
    <string name="registry_title">Registro de \nEntrada y Salida</string>
    <string name="registry_plate">Placa</string>
    <string-array name="registry_option">
        <item>Registro de entrada</item>
        <item>Registro de salida</item>
    </string-array>
    <string name="register_title">Alta de vehículos</string>
    <string name="pay_title">Pago de Residentes</string>
    <string name="pay_plate">No. de \nPlaca</string>
    <string name="pay_time">Tiempo \nestacionado (min)</string>
    <string name="pay_amount_pay">Cantidad a \npagar</string>
    <string name="register_button">Registrar</string>
    <string name="register_oficial_car">Vehículo oficial</string>
    <string name="register_car_resident">Vehículo de residente</string>
    <string name="register_car_no_resident">Vehículo No residente</string>
    <string-array name="register_option">
        <item>@string/register_oficial_car</item>
        <item>@string/register_car_resident</item>
        <item>@string/register_car_no_resident</item>
    </string-array>
</resources>