<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_registry"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_registry"
            android:text="@string/carpark_registry"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@id/button_month"
            app:layout_constraintEnd_toStartOf="@id/button_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_register"
            android:text="@string/carpark_register"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@id/button_pay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_registry"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_month"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_month"
            android:text="@string/carpark_month"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_pay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_registry" />

        <Button
            android:id="@+id/button_pay"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_pay"
            android:text="@string/carpark_pay"
            android:gravity="center|left|bottom"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_month"
            app:layout_constraintTop_toBottomOf="@id/button_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>